--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -25,7 +25,7 @@
         max-width:70%;
       }
       .to_label {
-        padding: 4px !important;
+        padding: 0px 14px 0px 4px !important;
       }
       .separador {
         margin-right: 6px;
