--- a/templates/circulo_estados.html
+++ b/templates/circulo_estados.html
@@ -5,11 +5,11 @@
 {% endcomment %}
 
 <span style="padding-right: 2px;" data-toggle="tooltip" data-html="true" animation="true" title=
-  {% if estado == 'r' %}
-    "atrasado para concluir esse ponto{% if prazo %} ({{prazo}}){% endif %}">&#128308;
-  {% elif estado == 'y' %}
-    "no prazo para concluir esse ponto{% if prazo %} ({{prazo}}){% endif %}">&#128993;
-  {% elif estado == 'g' %}
+  {% if estado.0 == 'r' %}
+    "atrasado para concluir esse ponto{% if estado.1 %} (prazo={{estado.1}}){% endif %}">&#128308;
+  {% elif estado.0 == 'y' %}
+    "no prazo para concluir esse ponto{% if estado.1 %} (prazo={{estado.1}}){% endif %}">&#128993;
+  {% elif estado.0 == 'g' %}
     "em dia com esse ponto">&#128994;
   {% else %}
     "">&#9899;
