--- a/templates/forum_respostas.html
+++ b/templates/forum_respostas.html
@@ -61,7 +61,7 @@
         <span lang="pt">em nome de</span>
         <span lang="en" style="display:none">on behalf of</span>
         <select name="em_nome{{pergunta.id}}" id="em_nome{{pergunta.id}}">
-          <option selected value> ninguem </option>
+          <option selected value class="troca_lingua" data-pt="ninguem" data-en="nobody">ninguem</option>
           {% for p in proposta.organizacao.parceiro_set.all %}
             <option value={{p.user.id}}
               {% if pergunta.em_nome_de %}
