--- a/professores/templates/professores/resultado_banca.html
+++ b/professores/templates/professores/resultado_banca.html
@@ -94,7 +94,7 @@
   </ul>
 
   {% comment %} PROBATION {% endcomment %}
-  {% if banca.tipo_de_banca == 3 %}
+  {% if banca.alocacao %}
     <b>
       <span lang="pt">Estudante:</span>
       <span lang="en" style="display: none;">Student:</span>
