--- a/academica/templates/academica/academica.html
+++ b/academica/templates/academica/academica.html
@@ -25,11 +25,11 @@
   <span lang="pt">Avaliações de Entregas</span>
   <span lang="en" style="display: none;">Deliveries Evaluation</span>
 </a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'informe_bancas' 1 %}">
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'informe_bancas' "BI" %}">
   <span lang="pt">Bancas Intermediárias</span>
   <span lang="en" style="display: none;">Intermediate Examination Boards</span>
 </a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'informe_bancas' 0 %}">
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'informe_bancas' "BF" %}">
   <span lang="pt">Bancas Finais</span>
   <span lang="en" style="display: none;">Final Examination Boards</span>
 </a></div>
