--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -199,11 +199,11 @@
                   <b lang="pt">Membros da Banca da Avaliação:</b>
                   <b lang="en">Examination Board Members:</b>
                   {% with is_ori=banca.get_projeto.orientador %}
-                    <a class="email" href="mailto:{% if is_ori and banca.tipo_de_banca == 0 or banca.tipo_de_banca == 1 %}{{banca.get_projeto.orientador.user.email}}{% endif %};{% for membro in banca.membros %}{{membro.email}}{% if not forloop.last %};{% endif %}{% endfor %}?subject=Capstone%20Insper%20-%20Projeto:%20{{banca.get_projeto}}&body={% if is_ori and banca.tipo_de_banca == 0 or banca.tipo_de_banca == 1 %}{{banca.get_projeto.orientador.user.get_full_name}}, {% endif %}{% for membro in banca.membros %}{% if not forloop.first %}{% if forloop.last %}%20e{% else %},{% endif %}%20{% endif %}{{membro.get_full_name}}{% endfor %},%0D%0A%0D%0" target="_blank">
+                    <a class="email" href="mailto:{% if is_ori and banca.composicao.exame.sigla == "BI" or banca.composicao.exame.sigla == "BF" %}{{banca.get_projeto.orientador.user.email}}{% endif %};{% for membro in banca.membros %}{{membro.email}}{% if not forloop.last %};{% endif %}{% endfor %}?subject=Capstone%20Insper%20-%20Projeto:%20{{banca.get_projeto}}&body={% if is_ori and banca.composicao.exame.sigla == "BI" or banca.composicao.exame.sigla == "BF" %}{{banca.get_projeto.orientador.user.get_full_name}}, {% endif %}{% for membro in banca.membros %}{% if not forloop.first %}{% if forloop.last %}%20e{% else %},{% endif %}%20{% endif %}{{membro.get_full_name}}{% endfor %},%0D%0A%0D%0" target="_blank">
                       <i class="fas fa-mail-bulk"></i>
                     </a>
                     <ol style="margin-bottom:0px;">
-                      {% if is_ori and banca.tipo_de_banca == 0 or banca.tipo_de_banca == 1 %}
+                      {% if is_ori and banca.composicao.exame.sigla == "BI" or banca.composicao.exame.sigla == "BF" %}
                         <li>
                           <a class="imprimir" href="{% url 'professor_detail' banca.get_projeto.orientador.id %}">
                             {{banca.get_projeto.orientador.user.get_full_name}} 
@@ -244,7 +244,7 @@
               {% endif %}
 
               <div class="grupo" style="margin-top: 8px;">
-                {% if banca.tipo_de_banca == 3 %}  {% comment %} Banca Probation {% endcomment %}
+                {% if banca.alocacao %}  {% comment %} Banca Probation {% endcomment %}
                   <b lang="pt">Estudante:</b>
                   <b lang="en">Student:</b>
                   {% include "mostra_estudante.html" with alocacao=banca.alocacao %}  
