--- a/professores/templates/professores/professores.html
+++ b/professores/templates/professores/professores.html
@@ -19,7 +19,7 @@
 </a></div>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'bancas_alocadas' %}">
   <span lang="pt">Bancas</span>
-  <span lang="en" style="display: none;">Evaluation Boards</span>
+  <span lang="en" style="display: none;">Examination Boards</span>
 </a></div>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'mentorias_alocadas' %}">
   <span lang="pt">Mentorias</span>
