--- a/templates/tabela_avaliacao_objetivos.html
+++ b/templates/tabela_avaliacao_objetivos.html
@@ -35,7 +35,7 @@
     <table style="width:100%;" class="tab_avaliacao">
       <tr>
 
-        {% if banca.tipo_de_banca != 3 %}{% comment %} Não é probation {% endcomment %}
+        {% if banca.composicao.exame.sigla != "P" %}{% comment %} Não é probation {% endcomment %}
         <th class="nav-side-wrapper th_objetivos tabela{{objetivo.id}} objetivo{{objetivo.id}}I" style="width:18%">
           <div class="nav-side">
           <label class="labels" for="objetivo{{objetivo.id}}I">
@@ -67,7 +67,7 @@
             </span>(C)
             <input type="radio" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}C inputOA" id="objetivo{{objetivo.id}}C" name="objetivo.{{objetivo.id}}" value="{{objetivo.id}}.C" required />
           </label>
-          {% if banca.tipo_de_banca != 3 %}{% comment %} Não é probation {% endcomment %}
+          {% if banca.composicao.exame.sigla != "P" %}{% comment %} Não é probation {% endcomment %}
           <label class="labels" for="objetivo{{objetivo.id}}CX">
             (C+)
             <input type="radio" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}C objetivo{{objetivo.id}}CX inputOA" id="objetivo{{objetivo.id}}CX" name="objetivo.{{objetivo.id}}" value="{{objetivo.id}}.C+" required />
@@ -76,7 +76,7 @@
         </div>
         </th>
 
-        {% if banca.tipo_de_banca != 3 %}{% comment %} Não é probation {% endcomment %}
+        {% if banca.composicao.exame.sigla != "P" %}{% comment %} Não é probation {% endcomment %}
         <th class="nav-side-wrapper th_objetivos tabela{{objetivo.id}} objetivo{{objetivo.id}}B objetivo{{objetivo.id}}BX" style="width:18%">
           <div class="nav-side">
           <label class="labels" for="objetivo{{objetivo.id}}B">
@@ -127,12 +127,12 @@
         {% elif periodo_para_rubricas == 2 %} {% comment %} Rubricas Finais {% endcomment %}
 
           {% if individual %}
-            {% if banca.tipo_de_banca != 3 %}{% comment %} Não é probation {% endcomment %}
+            {% if banca.composicao.exame.sigla != "P" %}{% comment %} Não é probation {% endcomment %}
               <td class="td_objetivos tabela{{objetivo.id}} objetivo{{objetivo.id}}I" ><label for="objetivo{{objetivo.id}}I" lang="pt">{{objetivo.rubrica_final_individual_I}}</label><label for="objetivo{{objetivo.id}}I" lang="en">{{objetivo.rubrica_final_individual_I_en}}</label></td>
             {% endif %}
             <td class="td_objetivos tabela{{objetivo.id}} objetivo{{objetivo.id}}D" ><label for="objetivo{{objetivo.id}}D" lang="pt">{{objetivo.rubrica_final_individual_D}}</label><label for="objetivo{{objetivo.id}}D" lang="en">{{objetivo.rubrica_final_individual_D_en}}</label></td>
             <td class="td_objetivos tabela{{objetivo.id}} objetivo{{objetivo.id}}C objetivo{{objetivo.id}}CX" ><label for="objetivo{{objetivo.id}}C" lang="pt">{{objetivo.rubrica_final_individual_C}}</label><label for="objetivo{{objetivo.id}}C" lang="en">{{objetivo.rubrica_final_individual_C_en}}</label></td>
-            {% if banca.tipo_de_banca != 3 %}{% comment %} Não é probation {% endcomment %}
+            {% if banca.composicao.exame.sigla != "P" %}{% comment %} Não é probation {% endcomment %}
               <td class="td_objetivos tabela{{objetivo.id}} objetivo{{objetivo.id}}B objetivo{{objetivo.id}}BX" ><label for="objetivo{{objetivo.id}}B" lang="pt">{{objetivo.rubrica_final_individual_B}}</label><label for="objetivo{{objetivo.id}}B" lang="en">{{objetivo.rubrica_final_individual_B_en}}</label></td>
               <td class="td_objetivos tabela{{objetivo.id}} objetivo{{objetivo.id}}A objetivo{{objetivo.id}}AX" ><label for="objetivo{{objetivo.id}}A" lang="pt">{{objetivo.rubrica_final_individual_A}}</label><label for="objetivo{{objetivo.id}}A" lang="en">{{objetivo.rubrica_final_individual_A_en}}</label></td>
             {% endif %}
@@ -154,7 +154,7 @@
       <table style="width:100%;">
         <tr style="width:100%;">
           <td class="nav-side-wrapper th_na tabela{{objetivo.id}} objetivo{{objetivo.id}}NA" 
-            colspan="{% if banca.tipo_de_banca != 3 %}6{% else %}5{% endif %}">
+            colspan="{% if banca.composicao.exame.sigla != "P" %}6{% else %}5{% endif %}">
               <label style="margin-left: 8px;" for="objetivo{{objetivo.id}}NA">
                 <input style="padding-bottom:2px;" type="radio" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}NA inputNA" id="objetivo{{objetivo.id}}NA" name="objetivo.{{objetivo.id}}" value="{{objetivo.id}}.NA" required /> 
                 <span lang="pt">Prefiro não avaliar este objetivo de aprendizagem</span>
