--- a/estudantes/templates/estudantes/selecao_propostas.html
+++ b/estudantes/templates/estudantes/selecao_propostas.html
@@ -6,40 +6,89 @@
 {% endcomment %}
 
 {% block head %}
+  {% load static %}
+  {% load dictionary %}
+
+  <link rel="stylesheet" href="{% static 'css/tab_arrend.css' %}">
 
   <style>
     .ordenar {
-      box-shadow:inset 0px 1px 3px 0px #91b8b3;
-      background:linear-gradient(to bottom, #96ada7 5%, #8c9c9c 100%);
-      background-color:#96ada7;
-      border-radius:5px;
-      border:1px solid #768983;
-      display:inline-block;
-      cursor:pointer;
-      color:#ffffff;
-      font-family:Arial;
-      font-size:13px;
-      font-weight:bold;
-      padding:3px 3px;
-      text-decoration:none;
-      text-shadow:0px -1px 0px #2b665e;
-      margin-left:10px;
+      box-shadow: inset 0px 1px 3px 0px #91b8b3;
+      background: linear-gradient(to bottom, #96ada7 5%, #8c9c9c 100%);
+      background-color: #96ada7;
+      border-radius: 5px;
+      border: 1px solid #768983;
+      display: inline-block;
+      cursor: pointer;
+      color: #ffffff;
+      font-family: Arial;
+      font-size: 13px;
+      font-weight: bold;
+      padding: 3px 3px;
+      text-decoration: none;
+      text-shadow: 0px -1px 0px #2b665e;
+      margin-left: 10px;
       margin-bottom: 3px;    
       float: right;
     }
 
     .ordenar:hover {
-      background:linear-gradient(to bottom, #8c9c9c 5%, #96ada7 100%);
-      background-color:#8c9c9c;
+      background: linear-gradient(to bottom, #8c9c9c 5%, #96ada7 100%);
+      background-color: #8c9c9c;
     }
 
     .ordenar:active {
-      position:relative;
-      top:1px;
+      position: relative;
+      top: 1px;
+    }
+
+    .table-sm {
+        border-collapse: separate;
+        border-spacing: 0 0.5em;
+    }
+    
+    .table-hover tbody tr:hover {
+      background-color: #f5f5f5;
+    }
+
+    .table-sm th, .table-sm td {
+      padding: 0.25rem;
+    }
+
+    .select-wrapper {
+      position: relative;
+      display: inline-block;
+    }
+
+    .select-wrapper select {
+      background: #f8f9fa;
+      border: 1px solid #ced4da;
+      border-radius: 0.25rem;
+      color: #495057;
+    }
+
+    .table-row {
+      border-radius: 0.25rem;
+      overflow: hidden;
+      box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+    }
+
+    .linha_th {
+      border-top: 1px solid #ddd;
+      border-bottom: 1px solid #ddd;
+      border-left: 1px solid #ddd;
+      border-radius: 0.25rem 0 0 0.25rem;
+    }
+
+    .linha_td {
+      border-top: 1px solid #ddd;
+      border-bottom: 1px solid #ddd;
+      border-right: 1px solid #ddd;
+      border-radius: 0 0.25rem 0.25rem 0;
     }
 
   </style>
-
+  
 {% endblock %}
 
 {% block content %}
@@ -74,48 +123,44 @@
     <h5><br><br>
   {% endif %}
 
-  <div class="row">
-    <div class="col">
-      <span lang="pt">Selecione as propostas conforme seu interesse</span>
-      <span lang="en" style="display:none">Select the proposals according to your interest</span>
+  <div class="container-fluid mt-1">
+    <div class="row">
+      <div class="col-12 col-md-10">
+        <span lang="pt">Selecione as propostas conforme seu interesse</span>
+        <span lang="en" style="display:none">Select the proposals according to your interest</span>
+      </div>
+      <div class="col-12 col-md-2 text-md-right mt-2 mt-md-0">
+        <button class="ordenar btn btn-primary" onclick="sortTable()">
+          <span lang="pt">Ordenar</span>
+          <span lang="en" style="display:none">Sort</span>&nbsp;&#x21e3;
+        </button>
+      </div>
     </div>
-    <div class="col-2 align-self-end">
-      <button class="ordenar" onclick="sortTable()"><span lang="pt">Ordenar</span><span lang="en" style="display:none">Sort</span>&nbsp;&#x21e3;</button>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
 
-      {% if propostas %}
-        <form action="" method="post"> {% csrf_token %}
-          {% if liberadas_propostas %}
+    {% if propostas %}
+      <form action="" method="post"> {% csrf_token %}
+        {% if liberadas_propostas %}
 
-            <table id="propostas" class="table table-hover table-bordered table-sm ">
+            <table id="propostas" class="opcoes_t table-hover table-sm ">
               <tbody>
               {% for proposta in propostas %} 
                 {% if proposta.disponivel %}
-                  <tr>
-                    <th scope="row" class="align-middle" style="text-align:center; width: 1%;">
-                      <select class="opcoes" id="selection{{proposta.pk}}" name="selection{{proposta.pk}}" 
-                      {% if vencido %}disabled{% endif %}></select>
-                      <script>
-                        var select = document.getElementById("selection{{proposta.pk}}");
-                        select.options[select.options.length] = new Option("--", 0);
-                        for(var index=1; index<={{propostas|length}}; index++){
-                          select.options[select.options.length] = new Option(index, index);
-                        }
+                  <tr class="table-row">
+                    <th scope="row" class="linha_th align-middle text-center" style="width: 1%;">
+                      <div class="select-wrapper">
+                        <select
+                        class="opcoes" id="selection{{proposta.pk}}" name="selection{{proposta.pk}}" 
+                        {% if vencido %}disabled{% endif %}>
+                          <option value="0">--</option>
 
-                        // Para agora nao encontrei forma mais inteligente de fazer isso
-                        {% for opcao in opcoes_temporarias %} 
-                          {% if opcao.proposta.pk == proposta.pk %}
-                          select.selectedIndex = {{ opcao.prioridade }};
-                          {% endif %}
-                        {% endfor %}
-
-                      </script>
+                          {% for index in propostas|length|to_range %}
+                              <option value="{{ index }}" {% if opcoes_temporarias|get_value:proposta.id == index %}selected{% endif %}>{{ index }}</option>
+                          {% endfor %}
+                        </select>
+                      </div>
                     </th>
-                    <td>
-                      <a style="display: block;" href="{% url 'proposta_detalhes' proposta.pk %}">
+                    <td class="linha_td">
+                      <a href="{% url 'proposta_detalhes' proposta.pk %}">
                         {% if proposta.titulo %}
                           {{proposta.titulo}}
                         {% else %}
@@ -136,59 +181,68 @@
                         {% include "tipo_proposta.html" %}
 
                       </a>
+                      
+                      <i class="anteriores" style="float:right;"><span class="seta-cima"></span></i>
+                      <div id="relato{{item.id}}" style="display: none; background-color: #f9f9f2; padding: 5px;" class="relato">
+                        {{proposta.descricao|linebreaks}}
+                      </div>
+
                     </td>
                   </tr>
                 {% endif %}
               {% endfor %}
               </tbody>
             </table>
-            
-          {% else %}
-            <span lang="pt">Propostas ainda não liberadas.</span>
-            <span lang="en" style="display:none">Proposals not yet released.</span>
-          {% endif %}
 
-          <font color="red">
-            {{warnings|linebreaks}}
-          </font>
+        {% else %}
+          <span lang="pt">Propostas ainda não liberadas.</span>
+          <span lang="en" style="display:none">Proposals not yet released.</span>
+        {% endif %}
 
-          <small>
-            <span lang="pt">Quando decidir os projetos desejados, clique em <b>Confirmar</b>. Você pode reconfirmar quantas vezes desejar até dia {{prazo}}.</span>
-            <span lang="en" style="display:none">When you decide on the desired projects, click <b>Confirm</b>. You can reconfirm as many times as you want until {{prazo}}.</span>
-          </small><br>
+      </div>
 
-          <div style="display: flex; margin-top: 8px;">      
+        <font color="red">
+          {{warnings|linebreaks}}
+        </font>
+
+        <small>
+          <span lang="pt">Quando decidir os projetos desejados, clique em <b>Confirmar</b>. Você pode reconfirmar quantas vezes desejar até dia {{prazo}}.</span>
+          <span lang="en" style="display:none">When you decide on the desired projects, click <b>Confirm</b>. You can reconfirm as many times as you want until {{prazo}}.</span>
+        </small><br>
+
+        <div class="row mt-3">
+          <div class="col-12 col-md-2">
             <button class="btn btn-primary mb-1 mr-3" 
-                    {% if vencido or not liberadas_propostas %}disabled{% endif %}
-                    {% if areas %} 
-                      type="submit" 
-                    {% else %} 
-                      style="background-color: #6fa2fa;"
-                      type="button" 
-                      onclick="alert('Selecione suas áreas de interesse e experiências');"
-                    {% endif %}
-                    >
+                  {% if vencido or not liberadas_propostas %}disabled{% endif %}
+                  {% if areas %} 
+                    type="submit" 
+                  {% else %} 
+                    style="background-color: #6fa2fa;"
+                    type="button" 
+                    onclick="alert('Selecione suas áreas de interesse e experiências');"
+                  {% endif %}
+                  >
               <span lang="pt">Confirmar</span>
               <span lang="en" style="display:none">Confirm</span>
             </button>
-
-            <small style="float: right;"><font color="red">
+          </div>
+          <div class="col-12 col-md-10 text-md-left mt-0 mt-md-0">
+            <small><font color="red">
               <span lang="pt">Selecione ao menos {{min_props}} propostas (1 a {{min_props}}), sendo 1 para a que você tem mais interesse.</span>
               <span lang="en" style="display:none">Select at least {{min_props}} proposals (1 to {{min_props}}), being 1 for the one you are most interested in.</span>
             </font></small>
-            
           </div>
+        </div>
 
-        </form>
+      </form>
 
-      {% else %}
-        <p>
-          <span lang="pt">Não existem Propostas de Projetos disponíveis.</span>
-          <span lang="en" style="display:none">There are no Project Proposals available.</span>
-        </p>
-      {% endif %}
+    {% else %}
+      <p>
+        <span lang="pt">Não existem Propostas de Projetos disponíveis.</span>
+        <span lang="en" style="display:none">There are no Project Proposals available.</span>
+      </p>
+    {% endif %}
 
-    </div>
   </div>
 
   <script>
@@ -224,33 +278,33 @@
       }
     }
 
-    function carrega_pagina() {  
-      sortTable();
-    }
-
-    window.onload = carrega_pagina
-
     function atualiza_opcao_temporaria() {
-
-      var proposta_id = $(this).attr("id").slice(9);
-      var prioridade = $(this).val(); 
-
       $.ajax({
           type: "POST",
           url: "{% url 'opcao_temporaria' %}",
           data: {    
-              proposta_id: proposta_id,
-              prioridade: prioridade,
+              proposta_id: $(this).attr("id").slice(9),
+              prioridade: $(this).val(),
               "csrfmiddlewaretoken": "{{ csrf_token }}",
           },
           success: function(response){},
           {% include "ajax_error_function.js" %}
       });
-
     }
-    
     $(".opcoes").change(atualiza_opcao_temporaria);
 
+    function carrega_pagina() {  
+      sortTable();
+    }
+    window.onload = carrega_pagina;
+
+  </script>
+
+  <script>
+    $(".anteriores").on("click", function() {
+      $(this).siblings("div").toggle(200);
+      $("span", this).toggleClass("seta-baixo seta-cima");
+    });
   </script>
 
 {% endblock %}
